<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_channel"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="2">
...
        android:id="@+id/fragment_add_channel_exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/global_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_add_channel_add_button"
        app:layout_constraintStart_toStartOf="@+id/fragment_add_channel_add_button"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_channel_add_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/fragment_add_channel_add_button"
...
