<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- line 1 -->
    <TextView
        android:id="@+id/snChannelName"
        android:layout_width="258dp"
        android:layout_height="26dp"
        android:text="no ownerName"
        />

    <!-- line 2 -->
    <EditText
        android:id="@+id/snMessage"
        android:layout_width="258dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textMultiLine"
        />

    <!-- recipients -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recipientsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="recipients: "
            />

        <TextView
            android:id="@+id/snMessageRecipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="anybody"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/selectRecipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelectRecipients"
            android:text="Select"
            />

        <Button
            android:id="@+id/removeAllRecipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRemoveRecipients"
            android:text="to anybody"
            />
    </LinearLayout>

    <!-- line : encryption -->
    <!-- https://developer.android.com/guide/topics/ui/controls/checkbox -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/end2end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E2E security: "
            />

        <CheckBox
            android:id="@+id/snSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="sign" />

        <CheckBox
            android:id="@+id/snEncrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onEncryptedClick"
            android:text="encrypt" />
    </LinearLayout>


    <!-- comments -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />

    </LinearLayout>

    <!-- line last -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSendClick"
            android:text="@string/send"
            />

        <Button
            android:id="@+id/abortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAbortClick"
            android:text="@string/abort"
            />

    </LinearLayout>


</LinearLayout>