<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/snAddChannelButton"
        android:checkable="true"
        android:title="@string/snAddChannelButtonText"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/snRemoveAllChannelButton"
        android:checkable="true"
        android:title="@string/snRemoveAllChannelButtonText"
        app:showAsAction="always|withText"
        />
</menu>