<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/snChannelAddURIExplanation"
        android:text="@string/snMessageURIExplanationText"
        android:layout_gravity="left|top" />

    <TextView
        android:id="@+id/snChannelAddURI"
        android:inputType="text"
        android:text="sn2://ChannelURI"
        android:layout_gravity="left|top"
        />

    <TextView
        android:id="@+id/snChannelAddNameExplanation"
        android:text="@string/snMessagerChannelNameExplanationText"
        android:layout_gravity="left|top" />

    <EditText
        android:id="@+id/snChannelAddName"
        android:inputType="text"
        android:text="channelName"
        android:layout_gravity="left|top" />

    <Button
        android:id="@+id/snChannelAddDoAdd"
        android:text="Add"
        android:onClick="onClick"
        android:layout_gravity="left|top"
        />

    <Button
        android:id="@+id/snChannelAddExit"
        android:text="Exit"
        android:layout_gravity="left|top"
        />

</GridLayout>
